# ConceptWeb

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: run_concept_web.py
reports/ConceptWebOutput/: conceptlist.json  interactive_concept_map.html  relationship_list.json
src/concept_web/: ConceptWeb.py  build_concept_map.py  concept_extraction.py  load_documents.py  ocr_image_to_txt.py  prompts.py  slide_pipeline_utils.py  tools.py  visualize_graph.py
tests/: test_load_documents.py
